# drug-recalls-june20

./: .gitignore  main.py  pyproject.toml
apps/backend/: main.py
apps/frontend/: .dockerignore  Dockerfile
apps/frontend/src/app/: globals.css  layout.tsx  page.tsx
data/processed/: all-years-drug-events.txt  drug-event-2024-urls.txt
data/raw/: drug-events-fda-files.json
scripts/: download_orchastrater.py  extract_to_text.py  json_to_duckdb.py  json_to_qdrant.py  qdrant_ui.py  scraper.py  search_qdrant.py
