[project]
name = "drug-recalls-june20"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.43.34",
    "duckdb>=1.5.4",
    "firecrawl>=4.30.2",
    "firecrawl-py>=4.30.2",
    "ijson>=3.5.0",
    "polars>=1.41.2",
    "pyarrow>=24.0.0",
    "pymilvus>=3.0.0",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "requests>=2.34.2",
    "sentence-transformers>=5.6.0",
]
